--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12007,3 +12007,11 @@ a.text-dark:focus {
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+.card-body {
+  padding: 1.5rem;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  background-color: red;
+}
+
