--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,3 +12,8 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+.card-body {
+  padding: 1.5rem;
+  flex: 1 1 auto;
+  background-color: red;
+}
